ros2_ws/log/build_2024-08-13_12-18-15/serial_communicator/stderr.log
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:46:23: error: no viable overloaded '='
        subscription_ = this->create_subscription<geometry_msgs::msg::Twist>(
        ~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/fergusproctor/miniforge3/envs/ros_env/bin/../include/c++/v1/__memory/shared_ptr.h:651:42: note: candidate function not viable: no known conversion from 'shared_ptr<Subscription<geometry_msgs::msg::Twist_<std::allocator<void>>, [...], geometry_msgs::msg::Twist_<std::allocator<void>>, geometry_msgs::msg::Twist_<std::allocator<void>>, MessageMemoryStrategy<geometry_msgs::msg::Twist_<std::allocator<void>>, [...]>>>' to 'const shared_ptr<Subscription<std_msgs::msg::String_<std::allocator<void>>, [...], std_msgs::msg::String_<std::allocator<void>>, std_msgs::msg::String_<std::allocator<void>>, MessageMemoryStrategy<std_msgs::msg::String_<std::allocator<void>>, [...]>>>' for 1st argument
  _LIBCPP_HIDE_FROM_ABI shared_ptr<_Tp>& operator=(const shared_ptr& __r) _NOEXCEPT {
                                         ^
/Users/fergusproctor/miniforge3/envs/ros_env/bin/../include/c++/v1/__memory/shared_ptr.h:657:42: note: candidate template ignored: requirement '__compatible_with<rclcpp::Subscription<geometry_msgs::msg::Twist_<std::allocator<void>>, std::allocator<void>, geometry_msgs::msg::Twist_<std::allocator<void>>, geometry_msgs::msg::Twist_<std::allocator<void>>, rclcpp::message_memory_strategy::MessageMemoryStrategy<geometry_msgs::msg::Twist_<std::allocator<void>>, std::allocator<void>>>, rclcpp::Subscription<std_msgs::msg::String_<std::allocator<void>>, std::allocator<void>, std_msgs::msg::String_<std::allocator<void>>, std_msgs::msg::String_<std::allocator<void>>, rclcpp::message_memory_strategy::MessageMemoryStrategy<std_msgs::msg::String_<std::allocator<void>>, std::allocator<void>>>>::value' was not satisfied [with _Yp = rclcpp::Subscription<geometry_msgs::msg::Twist_<std::allocator<void>>, std::allocator<void>, geometry_msgs::msg::Twist_<std::allocator<void>>, geometry_msgs::msg::Twist_<std::allocator<void>>>]
  _LIBCPP_HIDE_FROM_ABI shared_ptr<_Tp>& operator=(const shared_ptr<_Yp>& __r) _NOEXCEPT {
                                         ^
/Users/fergusproctor/miniforge3/envs/ros_env/bin/../include/c++/v1/__memory/shared_ptr.h:662:42: note: candidate function not viable: no known conversion from 'shared_ptr<Subscription<geometry_msgs::msg::Twist_<std::allocator<void>>, [...], geometry_msgs::msg::Twist_<std::allocator<void>>, geometry_msgs::msg::Twist_<std::allocator<void>>, MessageMemoryStrategy<geometry_msgs::msg::Twist_<std::allocator<void>>, [...]>>>' to 'shared_ptr<Subscription<std_msgs::msg::String_<std::allocator<void>>, [...], std_msgs::msg::String_<std::allocator<void>>, std_msgs::msg::String_<std::allocator<void>>, MessageMemoryStrategy<std_msgs::msg::String_<std::allocator<void>>, [...]>>>' for 1st argument
  _LIBCPP_HIDE_FROM_ABI shared_ptr<_Tp>& operator=(shared_ptr&& __r) _NOEXCEPT {
                                         ^
/Users/fergusproctor/miniforge3/envs/ros_env/bin/../include/c++/v1/__memory/shared_ptr.h:668:42: note: candidate template ignored: requirement '__compatible_with<rclcpp::Subscription<geometry_msgs::msg::Twist_<std::allocator<void>>, std::allocator<void>, geometry_msgs::msg::Twist_<std::allocator<void>>, geometry_msgs::msg::Twist_<std::allocator<void>>, rclcpp::message_memory_strategy::MessageMemoryStrategy<geometry_msgs::msg::Twist_<std::allocator<void>>, std::allocator<void>>>, rclcpp::Subscription<std_msgs::msg::String_<std::allocator<void>>, std::allocator<void>, std_msgs::msg::String_<std::allocator<void>>, std_msgs::msg::String_<std::allocator<void>>, rclcpp::message_memory_strategy::MessageMemoryStrategy<std_msgs::msg::String_<std::allocator<void>>, std::allocator<void>>>>::value' was not satisfied [with _Yp = rclcpp::Subscription<geometry_msgs::msg::Twist_<std::allocator<void>>, std::allocator<void>, geometry_msgs::msg::Twist_<std::allocator<void>>, geometry_msgs::msg::Twist_<std::allocator<void>>>]
  _LIBCPP_HIDE_FROM_ABI shared_ptr<_Tp>& operator=(shared_ptr<_Yp>&& __r) {
                                         ^
/Users/fergusproctor/miniforge3/envs/ros_env/bin/../include/c++/v1/__memory/shared_ptr.h:688:42: note: candidate template ignored: could not match 'unique_ptr' against 'shared_ptr'
  _LIBCPP_HIDE_FROM_ABI shared_ptr<_Tp>& operator=(unique_ptr<_Yp, _Dp>&& __r) {
                                         ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:77:15: warning: unused variable 'lin_vel_x_' [-Wunused-variable]
        float lin_vel_x_ = vel->linear.x;
              ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/serial_node.cpp:78:15: warning: unused variable 'ang_vel_' [-Wunused-variable]
        float ang_vel_ = vel->angular.z;
              ^
2 warnings and 1 error generated.
make[2]: *** [CMakeFiles/serial_node.dir/build.make:76: CMakeFiles/serial_node.dir/src/serial_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/serial_node.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
